--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>FizzBuzz</title>
 </head>
 <body>
-    
+     <!--<form>
+       <label for="number">Please enter a number between 1 and 100:</label>
+        <input type="text" id="maxNumber">
+        <input type="button" onclick="fizzbuzz()" value="Submit">
+    </form> -->
 </body>
 </html>
